--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/swagger": "^5.2.0",
     "class-validator": "^0.13.2",
     "mongoose": "^6.2.1",
+    "nestjs-redoc": "^2.2.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
